Fix table size and overflow(scroll)

--- a/cloudike/src/app/drive/drive.component.css
+++ b/cloudike/src/app/drive/drive.component.css
@@ -67,3 +67,9 @@ a.path-link:hover
     text-decoration:none; 
     color: #4a9ce4;
 }
+
+.tableContainer {
+    overflow: scroll;
+    max-height: calc(100% - 40px);
+    padding: 0px 10px 2px 10px;
+}
